# dev-task

./: .env.example  .gitignore  Makefile  README.md  REVIEW.md  pyproject.toml  review_dk.md
src/conf/: config.py  logger_conf.ini
src/event_consumer/: authorization.py  database.py  model.py  routes.py  run_consumer.py
src/event_propagator/: run_propagator.py  utils.py
tests/: test_database.py
